--- a/68923-h/68923-h.htm
+++ b/68923-h/68923-h.htm
@@ -72,7 +72,7 @@ An Island Hell:
 <i>
 LONDON: A. M. PHILPOT LTD.
 <br/>
-<span class="pix44">69, GREAT RUSSELL STREET, W.C.I</span>
+<span class="pix44">69, GREAT RUSSELL STREET, W.C.1</span>
 </i>
 <br/>
 <span class="pix44">1926</span>
